cmake_minimum_required(VERSION 3.23)
project(TestEnvironment)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
INCLUDE_DIRECTORIES(/home/xu736946693/Desktop/DataStructure/lib)
add_executable(TestEnvironment main.cpp)
TARGET_LINK_LIBRARIES(TestEnvironment /home/xu736946693/Desktop/DataStructure/build/bin/libDataStructure_shared.so )
TARGET_LINK_LIBRARIES(TestEnvironment ${OpenCV_LIBS})